--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/bpfkorea/stoa#readme",
   "dependencies": {
+    "@types/sqlite3": "^3.1.6",
     "express": "^4.17.1",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
