--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/bpfkorea/stoa#readme",
   "dependencies": {
     "@types/sqlite3": "^3.1.6",
+    "assert": "^2.0.0",
     "express": "^4.17.1",
     "source-map-support": "^0.5.19",
     "sqlite3": "^4.2.0"
