--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/sqlite3": "^3.1.6",
     "assert": "^2.0.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "source-map-support": "^0.5.19",
     "sqlite3": "^4.2.0"
