--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/bpfkorea/stoa#readme",
   "dependencies": {
+    "@types/sodium-native": "^2.3.5",
     "@types/sqlite3": "^3.1.6",
     "assert": "^2.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "sodium-native": "^3.2.0",
     "source-map-support": "^0.5.19",
     "sqlite3": "^4.2.0"
   },
