--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/chai": "^4.2.11",
     "@types/express": "^4.17.6",
     "@types/mocha": "^7.0.2",
+    "@types/urijs": "^1.19.9",
+    "axios": "^0.19.2",
     "chai": "^4.2.0",
     "mocha": "^8.0.1",
     "nodemon": "^2.0.4",
@@ -40,6 +42,7 @@
     "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
+    "urijs": "^1.19.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
