--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "homepage": "https://github.com/bpfkorea/stoa#readme",
   "dependencies": {
+    "@ctrl/ts-base32": "^1.2.3",
     "@types/sodium-native": "^2.3.5",
     "@types/sqlite3": "^3.1.6",
     "ajv": "^6.12.3",
     "assert": "^2.0.0",
     "body-parser": "^1.19.0",
+    "crc": "^3.8.0",
     "express": "^4.17.1",
     "json-schema-to-typescript": "^9.1.1",
     "sodium-native": "^3.2.0",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
+    "@types/crc": "^3.4.0",
     "@types/express": "^4.17.6",
     "@types/mocha": "^7.0.2",
     "@types/urijs": "^1.19.9",
