--- a/package.json
+++ b/package.json
@@ -25,19 +25,20 @@
     "@types/sqlite3": "^3.1.6",
     "ajv": "^6.12.3",
     "assert": "^2.0.0",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "json-schema-to-typescript": "^9.1.1",
     "sodium-native": "^3.2.0",
     "source-map-support": "^0.5.19",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^4.2.0",
+    "urijs": "^1.19.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/express": "^4.17.6",
     "@types/mocha": "^7.0.2",
     "@types/urijs": "^1.19.9",
-    "axios": "^0.19.2",
     "chai": "^4.2.0",
     "mocha": "^8.0.1",
     "nodemon": "^2.0.4",
@@ -45,7 +46,6 @@
     "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
-    "urijs": "^1.19.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
