--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   },
   "homepage": "https://github.com/bpfkorea/stoa#readme",
   "dependencies": {
+    "@types/cors": "^2.8.7",
     "@types/sodium-native": "^2.3.5",
     "@types/sqlite3": "^3.1.6",
     "ajv": "^6.12.3",
     "assert": "^2.0.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "json-schema-to-typescript": "^9.1.1",
     "sodium-native": "^3.2.0",
