--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "src/main.js",
   "scripts": {
     "json2ts": "./node_modules/.bin/json2ts -i src/modules/data/schemas/ -o src/modules/data/types/",
-    "test": "npm run json2ts & mocha -r ts-node/register tests/**/*.test.ts",
-    "start": "npm run json2ts & nodemon --watch src --delay 1 --exec 'ts-node' src/main.ts",
-    "build": "npm run json2ts & webpack --config webpack.config.js",
+    "_test": "mocha -r ts-node/register tests/**/*.test.ts",
+    "_build": "webpack --config webpack.config.js",
+    "_start": "nodemon --watch src --delay 1 --exec 'ts-node' src/main.ts",
+    "test": "npm-run-all --serial json2ts _test",
+    "build": "npm-run-all --serial json2ts _build",
+    "start": "npm-run-all --serial json2ts _start",
     "tsc": "tsc"
   },
   "repository": {
