--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/bpfkorea/stoa#readme",
   "dependencies": {
+    "@ctrl/ts-base32": "^1.2.3",
     "@types/cors": "^2.8.7",
     "@types/sodium-native": "^2.3.5",
     "@types/sqlite3": "^3.1.6",
@@ -32,6 +33,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crc": "^3.8.0",
     "express": "^4.17.1",
     "json-schema-to-typescript": "^9.1.1",
     "sodium-native": "^3.2.0",
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.12",
+    "@types/crc": "^3.4.0",
     "@types/express": "^4.17.7",
     "@types/mocha": "^7.0.2",
     "@types/urijs": "^1.19.10",
