--- a/config/service_script.conf
+++ b/config/service_script.conf
@@ -3,7 +3,7 @@ nodaemon=true  ## This setting is to specify that we are not running in daemon m
 
 ## agora_service
 [program:agora_service]
-command=agora -c %(ENV_CONFIG)s
+command=agora -c %(ENV_CONFIG)
 autorestart=true
 stderr_logfile=/dev/stdout
 stderr_logfile_maxbytes=0
