--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/sqlite3": "^3.1.6",
     "ajv": "^6.12.3",
     "app-root-path": "^3.0.0",
+    "argparse": "^2.0.1",
     "assert": "^2.0.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
@@ -47,6 +48,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/argparse": "^2.0.1",
     "@types/chai": "^4.2.12",
     "@types/crc": "^3.4.0",
     "@types/express": "^4.17.7",
