--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "crc": "^3.8.0",
     "express": "^4.17.1",
     "express-ipfilter": "^1.1.2",
+    "extend": "^3.0.2",
+    "js-yaml": "^3.14.0",
     "json-schema-to-typescript": "^9.1.1",
     "smart-buffer": "^4.1.0",
     "sodium-native": "^3.2.0",
@@ -52,6 +54,8 @@
     "@types/chai": "^4.2.12",
     "@types/crc": "^3.4.0",
     "@types/express": "^4.17.7",
+    "@types/extend": "^3.0.1",
+    "@types/js-yaml": "^3.12.5",
     "@types/mocha": "^7.0.2",
     "@types/urijs": "^1.19.10",
     "chai": "^4.2.0",
