--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "extend": "^3.0.2",
     "js-yaml": "^3.14.0",
     "json-schema-to-typescript": "^9.1.1",
+    "mkdirp": "^1.0.4",
     "smart-buffer": "^4.1.0",
     "sodium-native": "^3.2.0",
     "source-map-support": "^0.5.19",
@@ -56,6 +57,7 @@
     "@types/express": "^4.17.7",
     "@types/extend": "^3.0.1",
     "@types/js-yaml": "^3.12.5",
+    "@types/mkdirp": "^1.0.1",
     "@types/mocha": "^7.0.2",
     "@types/urijs": "^1.19.10",
     "chai": "^4.2.0",
