--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "crc": "^3.8.0",
     "express": "^4.17.1",
     "extend": "^3.0.2",
+    "ip": "^1.1.5",
     "js-yaml": "^3.14.0",
     "json-schema-to-typescript": "^9.1.1",
     "mkdirp": "^1.0.4",
@@ -54,6 +55,7 @@
     "@types/crc": "^3.4.0",
     "@types/express": "^4.17.8",
     "@types/extend": "^3.0.1",
+    "@types/ip": "^1.1.0",
     "@types/js-yaml": "^3.12.5",
     "@types/mkdirp": "^1.0.1",
     "@types/mocha": "^7.0.2",
