--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "NODE_ENV=test npm-run-all --serial json2ts _test",
     "debug": "NODE_ENV=development npm-run-all --serial json2ts _test",
     "prestart": "npm run json2ts",
-    "start": "NODE_ENV=production nodemon -w src -d 1 -x ts-node src/main.ts",
+    "start": "NODE_ENV=production ts-node src/main.ts",
     "tsc": "tsc"
   },
   "repository": {
@@ -61,7 +61,6 @@
     "@types/urijs": "^1.19.10",
     "chai": "^4.2.0",
     "mocha": "^8.1.1",
-    "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
