Fix #126 - Allow optionally logging to Console

--- a/docs/config.example.yaml
+++ b/docs/config.example.yaml
@@ -24,3 +24,5 @@ logging:
   folder: logs/
   # Values: error, warn, info, http, verbose, debug, silly
   level: info
+  # Default to false
+  console: true
