--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,9 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Stoa CI
+name: CI
 
-on:
-  push:
-    branches: [ v0.x.x ]
-  pull_request:
-    branches: [ v0.x.x ]
+on: [push, pull_request ]
 
 jobs:
   build:
@@ -16,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [ 10.x, 12.x, 14.x, 15.x ]
 
     steps:
     - uses: actions/checkout@v2
