--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -113,7 +113,4 @@ database
 src/modules/data/types
 
 # Database files
-stoa/data/
-
-# Logging files
-stoa/logs/
+data/
