Move test data in their own folder/file
This makes the TS source code more readable by separating those giant strings.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Logs
-logs/
+/logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -113,4 +113,4 @@ database
 src/modules/data/types
 
 # Database files
-data/
+/data/
