Replace with `libsodium-wrappers-sumo`, the same sodium library used by the SDK
Because there is no `crypto_sign_ed25519_sk_to_seed` in the existing sodium library, it is replaced with a library that supports it.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@ctrl/ts-base32": "^1.2.4",
     "@types/app-root-path": "^1.2.4",
     "@types/cors": "^2.8.8",
-    "@types/sodium-native": "^2.3.5",
     "@types/sqlite3": "^3.1.6",
     "ajv": "^6.12.6",
     "argparse": "^2.0.1",
@@ -40,9 +39,9 @@
     "ip": "^1.1.5",
     "js-yaml": "^3.14.0",
     "json-schema-to-typescript": "^9.1.1",
+    "libsodium-wrappers-sumo": "^0.7.8",
     "mkdirp": "^1.0.4",
     "smart-buffer": "^4.1.0",
-    "sodium-native": "^3.2.0",
     "source-map-support": "^0.5.19",
     "sqlite3": "^5.0.0",
     "urijs": "^1.19.2",
@@ -56,6 +55,7 @@
     "@types/extend": "^3.0.1",
     "@types/ip": "^1.1.0",
     "@types/js-yaml": "^3.12.5",
+    "@types/libsodium-wrappers-sumo": "^0.7.4",
     "@types/mkdirp": "^1.0.1",
     "@types/mocha": "^7.0.2",
     "@types/urijs": "^1.19.12",
