--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "API server for Agora",
   "main": "src/main.js",
   "scripts": {
-    "json2ts": "./node_modules/.bin/json2ts -i src/modules/data/schemas/ -o src/modules/data/types/",
-    "_test": "mocha -r ts-node/register tests/**/*.test.ts",
-    "test": "NODE_ENV=test npm-run-all --serial json2ts _test",
-    "debug": "NODE_ENV=development npm-run-all --serial json2ts _test",
-    "prestart": "npm run json2ts",
+    "test": "NODE_ENV=test mocha -r ts-node/register tests/**/*.test.ts",
+    "debug": "NODE_ENV=development mocha -r ts-node/register tests/**/*.test.ts",
     "start": "NODE_ENV=production ts-node src/main.ts",
     "tsc": "tsc"
   },
@@ -26,12 +23,11 @@
     "@ctrl/ts-base32": "^1.2.4",
     "@types/app-root-path": "^1.2.4",
     "@types/cors": "^2.8.8",
-    "@types/sodium-native": "^2.3.5",
     "@types/sqlite3": "^3.1.6",
-    "ajv": "^6.12.6",
     "argparse": "^2.0.1",
     "assert": "^2.0.0",
     "axios": "^0.19.2",
+    "boa-sdk-ts": "git+https://github.com/bpfkorea/boa-sdk-ts.git",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crc": "^3.8.0",
@@ -39,10 +35,8 @@
     "extend": "^3.0.2",
     "ip": "^1.1.5",
     "js-yaml": "^3.14.0",
-    "json-schema-to-typescript": "^9.1.1",
     "mkdirp": "^1.0.4",
     "smart-buffer": "^4.1.0",
-    "sodium-native": "^3.2.0",
     "source-map-support": "^0.5.19",
     "sqlite3": "^5.0.0",
     "urijs": "^1.19.2",
@@ -61,7 +55,6 @@
     "@types/urijs": "^1.19.12",
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
-    "npm-run-all": "^4.1.5",
     "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
