--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "argparse": "^2.0.1",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
-    "boa-sdk-ts": "^0.0.19",
+    "boa-sdk-ts": "^0.0.20",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crc": "^3.8.0",
@@ -35,6 +35,7 @@
     "extend": "^3.0.2",
     "ip": "^1.1.5",
     "js-yaml": "^3.14.0",
+    "jsbi": "^3.1.4",
     "mkdirp": "^1.0.4",
     "smart-buffer": "^4.1.0",
     "source-map-support": "^0.5.19",
