Adapted Stoa to change from `BlockHeader.timestamp` to `BlockHeader.time_offset`
Calculates the block timestamp by adding offset based on the Genesis timestamp of the consensus config.

--- a/docs/config.example.yaml
+++ b/docs/config.example.yaml
@@ -26,3 +26,10 @@ logging:
   level: http
   # Default to false
   console: true
+
+################################################################################
+##                               Consensus config                             ##
+################################################################################
+consensus:
+  # 2021-01-01:00:00:00 GMT
+  genesis_timestamp: 1609459200
