Feature: DB was migrated from sqlite to mysql

--- a/docs/config.example.yaml
+++ b/docs/config.example.yaml
@@ -14,7 +14,10 @@ server:
 ##                               Database options                             ##
 ################################################################################
 database:
-  filename: data/main.db
+  host : 127.0.0.1
+  user : root
+  database : test
+  password : "12345678"
 
 ################################################################################
 ##                               Logging options                              ##
