--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API server for Agora",
   "main": "src/main.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha -r ts-node/register tests/**/*.test.ts",
+    "test": "NODE_ENV=test mocha -r ts-node/register tests/**/*.test.ts --timeout 10000",
     "debug": "NODE_ENV=development mocha -r ts-node/register tests/**/*.test.ts",
     "start": "NODE_ENV=production ts-node src/main.ts",
     "tsc": "tsc"
@@ -23,6 +23,7 @@
     "@ctrl/ts-base32": "^1.2.4",
     "@types/app-root-path": "^1.2.4",
     "@types/cors": "^2.8.8",
+    "@types/mysql": "^2.15.18",
     "@types/sqlite3": "^3.1.6",
     "argparse": "^2.0.1",
     "assert": "^2.0.0",
@@ -37,9 +38,9 @@
     "js-yaml": "^3.14.0",
     "jsbi": "^3.1.4",
     "mkdirp": "^1.0.4",
+    "mysql": "^2.18.1",
     "smart-buffer": "^4.1.0",
     "source-map-support": "^0.5.19",
-    "sqlite3": "^5.0.0",
     "urijs": "^1.19.6",
     "winston": "^3.3.3"
   },
