DB was migrated from sqlite to mysql
feature : Get latest block api was added

feature : Get latest transactions api was added

feature : Get block summary api was added

feature : Get blocks transaction api was added

feature : Get blocks enrollment api was added

--- a/docs/config.example.yaml
+++ b/docs/config.example.yaml
@@ -14,7 +14,11 @@ server:
 ##                               Database options                             ##
 ################################################################################
 database:
-  filename: data/main.db
+   host : 127.0.0.1
+   user : root
+   database : root
+   password : "root"
+   port : 3306
 
 ################################################################################
 ##                               Logging options                              ##
