--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API server for Agora",
   "main": "src/main.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha -r ts-node/register tests/**/*.test.ts",
+    "test": "NODE_ENV=test mocha --exit -r ts-node/register tests/**/*.test.ts",
     "debug": "NODE_ENV=development mocha -r ts-node/register tests/**/*.test.ts",
     "start": "NODE_ENV=production ts-node src/main.ts",
     "tsc": "tsc"
@@ -37,9 +37,9 @@
     "js-yaml": "^3.14.0",
     "jsbi": "^3.1.4",
     "mkdirp": "^1.0.4",
+    "mysql2": "^2.2.5",
     "smart-buffer": "^4.1.0",
     "source-map-support": "^0.5.19",
-    "sqlite3": "^5.0.0",
     "urijs": "^1.19.6",
     "winston": "^3.3.3"
   },
