Apply BOA-Sodium-TS

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "argparse": "^2.0.1",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
-    "boa-sdk-ts": "^0.0.36",
+    "boa-sdk-ts": "^0.0.39",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crc": "^3.8.0",
@@ -54,6 +54,7 @@
     "@types/mkdirp": "^1.0.1",
     "@types/mocha": "^7.0.2",
     "@types/urijs": "^1.19.12",
+    "boa-sodium-ts": "^0.1.0",
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
     "ts-loader": "^7.0.5",
