--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API server for Agora",
   "main": "src/main.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha --exit -r ts-node/register tests/**/*.test.ts",
+    "test": "NODE_ENV=test mocha --exit -r ts-node/register tests/**/*.test.ts --timeout 10000",
     "debug": "NODE_ENV=development mocha -r ts-node/register tests/**/*.test.ts",
     "start": "NODE_ENV=production ts-node src/main.ts",
     "tsc": "tsc"
