--- a/docs/config.example.yaml
+++ b/docs/config.example.yaml
@@ -17,7 +17,7 @@ database:
    host : 127.0.0.1
    user : root
    database : root
-   password : "root"
+   password : "12345678"
    port : 3306
 
 ################################################################################
