Integrate Branch boascan into v0.x.x (#340)
* DB was migrated from sqlite to mysql

feature : Get latest block api was added

feature : Get latest transactions api was added

feature : Get block summary api was added

feature : Get blocks transaction api was added

feature : Get blocks enrollment api was added

* Feature: Error handling was added
Feature: DB schema was updated(BLOB=>TINYBLOB, DECIMAL(65)=>BIGINT(20))
Feature: Testcases were updated

* Feature : paginate method was added

* Update : Code format was updated

* Feature: boa-stats testcase was added
Update: Code refactor

* Apply BOA-Sodium-TS

* Wallet: Remove unnecessary errors(HTTP Status 204).

* Increase the maximum request body size of `bodyParser` (200MByte)

* Change sample data according to a well-known key change.

* Fix http status code

* Replace distance with height for pre images

This work was synchronized due to the change of Agora.
This changes the database field distance to height in the validators table as it now is the block height for the pre-image.

* Change the expression of DataPayload from hex to base64

* Upgrade BOA-SDK-TS to 0.0.43

* Boascan was updated to work with latest agora

* feature: coin market cap data collection process was added

* update: replace boa with bosagora in coin market service

* update: whitespaces were removed

* Sort the transaction inputs and outputs

* Upgrade BOA-SDK-TS to 0.0.46

Co-authored-by: waqarRns <waqar@rnssol.com>
Co-authored-by: Michael Kim <michael.kim.200518@gmail.com>

--- a/docs/config.example.yaml
+++ b/docs/config.example.yaml
@@ -14,7 +14,11 @@ server:
 ##                               Database options                             ##
 ################################################################################
 database:
-  filename: data/main.db
+   host : 127.0.0.1
+   user : root
+   database : stoa
+   password : "12345678"
+   port : 3306
 
 ################################################################################
 ##                               Logging options                              ##
