--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API server for Agora",
   "main": "src/main.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha -r ts-node/register tests/**/*.test.ts",
+    "test": "NODE_ENV=test mocha --exit -r ts-node/register tests/**/*.test.ts --timeout 10000",
     "debug": "NODE_ENV=development mocha -r ts-node/register tests/**/*.test.ts",
     "start": "NODE_ENV=production ts-node src/main.ts",
     "tsc": "tsc"
@@ -29,6 +29,7 @@
     "axios": "^0.21.1",
     "boa-sdk-ts": "^0.0.46",
     "body-parser": "^1.19.0",
+    "coingecko-api-v3": "0.0.11",
     "cors": "^2.8.5",
     "crc": "^3.8.0",
     "express": "^4.17.1",
@@ -37,15 +38,17 @@
     "js-yaml": "^3.14.0",
     "jsbi": "^3.1.4",
     "mkdirp": "^1.0.4",
+    "mysql2": "^2.2.5",
+    "node-cron": "^3.0.0",
     "smart-buffer": "^4.1.0",
     "source-map-support": "^0.5.19",
-    "sqlite3": "^5.0.0",
     "urijs": "^1.19.6",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/argparse": "^2.0.2",
     "@types/chai": "^4.2.14",
+    "@types/coingecko-api": "^1.0.0",
     "@types/crc": "^3.4.0",
     "@types/express": "^4.17.8",
     "@types/extend": "^3.0.1",
@@ -53,6 +56,7 @@
     "@types/js-yaml": "^3.12.5",
     "@types/mkdirp": "^1.0.1",
     "@types/mocha": "^7.0.2",
+    "@types/node-cron": "^2.0.3",
     "@types/urijs": "^1.19.12",
     "boa-sodium-ts": "^0.1.0",
     "chai": "^4.2.0",
