--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/app-root-path": "^1.2.4",
     "@types/cors": "^2.8.8",
     "@types/mongodb": "^3.6.17",
+    "@types/socket.io": "^3.0.2",
     "@types/sqlite3": "^3.1.6",
     "argparse": "^2.0.1",
     "assert": "^2.0.0",
@@ -34,6 +35,7 @@
     "coingecko-api-v3": "0.0.11",
     "cors": "^2.8.5",
     "crc": "^3.8.0",
+    "event-dispatch": "^0.4.1",
     "express": "^4.17.1",
     "extend": "^3.0.2",
     "ip": "^1.1.5",
@@ -43,6 +45,8 @@
     "mysql2": "^2.2.5",
     "node-cron": "^3.0.0",
     "smart-buffer": "^4.1.0",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2",
     "source-map-support": "^0.5.19",
     "urijs": "^1.19.6",
     "winston": "^3.3.3",
