--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "NODE_ENV=test mocha --exit -r ts-node/register tests/**/*.test.ts --timeout 10000",
     "debug": "NODE_ENV=development mocha -r ts-node/register tests/**/*.test.ts",
     "start": "NODE_ENV=production ts-node src/main.ts",
-    "tsc": "tsc"
+    "convert": "ts-node .npm/convert-stoa-sample-data/convert-blocks.ts .npm/convert-stoa-sample-data/old/sample.json .npm/convert-stoa-sample-data/old/sample_utxo.json",
+      "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,7 @@
     "argparse": "^2.0.1",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
-    "boa-sdk-ts": "^0.0.47",
+    "boa-sdk-ts": "^0.0.48",
     "body-parser": "^1.19.0",
     "coingecko-api-v3": "0.0.11",
     "cors": "^2.8.5",
