--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ctrl/ts-base32": "^1.2.4",
     "@types/app-root-path": "^1.2.4",
     "@types/cors": "^2.8.8",
+    "@types/mongodb": "^3.6.17",
     "@types/sqlite3": "^3.1.6",
     "argparse": "^2.0.1",
     "assert": "^2.0.0",
@@ -44,7 +45,8 @@
     "smart-buffer": "^4.1.0",
     "source-map-support": "^0.5.19",
     "urijs": "^1.19.6",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-mongodb": "^5.0.7"
   },
   "devDependencies": {
     "@types/argparse": "^2.0.2",
