--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "homepage": "https://github.com/bosagora/stoa#readme",
     "dependencies": {
         "@ctrl/ts-base32": "^1.2.4",
+        "@sendgrid/mail": "^7.4.5",
         "@types/app-root-path": "^1.2.4",
+        "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.8",
         "@types/mongodb": "^3.6.17",
         "@types/socket.io": "^3.0.2",
         "argparse": "^2.0.1",
         "assert": "^2.0.0",
         "axios": "^0.21.1",
+        "bcrypt": "^5.0.1",
         "boa-sdk-ts": "^0.0.52",
         "body-parser": "^1.19.0",
         "coingecko-api-v3": "0.0.11",
@@ -40,10 +43,13 @@
         "ip": "^1.1.5",
         "js-yaml": "^3.14.0",
         "jsbi": "^3.1.4",
+        "jsonwebtoken": "^8.5.1",
         "mkdirp": "^1.0.4",
         "moment": "^2.29.1",
+        "mongoose": "^5.13.0",
         "mysql2": "^2.2.5",
         "node-cron": "^3.0.0",
+        "response-time": "^2.3.2",
         "smart-buffer": "^4.1.0",
         "socket.io": "^4.1.2",
         "socket.io-client": "^4.1.2",
@@ -61,6 +67,7 @@
         "@types/extend": "^3.0.1",
         "@types/ip": "^1.1.0",
         "@types/js-yaml": "^3.12.5",
+        "@types/jsonwebtoken": "^8.5.3",
         "@types/mkdirp": "^1.0.1",
         "@types/mocha": "^7.0.2",
         "@types/node-cron": "^2.0.3",
