--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "js-yaml": "^3.14.0",
         "jsbi": "^3.1.4",
         "mkdirp": "^1.0.4",
+        "moment": "^2.29.1",
         "mysql2": "^2.2.5",
         "node-cron": "^3.0.0",
         "smart-buffer": "^4.1.0",
