--- a/package.json
+++ b/package.json
@@ -1,75 +1,76 @@
 {
-  "name": "stoa",
-  "version": "0.0.0",
-  "description": "API server for Agora",
-  "main": "src/main.js",
-  "scripts": {
-    "test": "NODE_ENV=test mocha --exit -r ts-node/register tests/**/*.test.ts --timeout 10000",
-    "debug": "NODE_ENV=development mocha -r ts-node/register tests/**/*.test.ts",
-    "start": "NODE_ENV=production ts-node src/main.ts",
-    "convert": "ts-node .npm/convert-stoa-sample-data/convert-blocks.ts .npm/convert-stoa-sample-data/old/sample.json .npm/convert-stoa-sample-data/old/sample_utxo.json",
-    "tsc": "tsc"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bosagora/stoa.git"
-  },
-  "author": "BOSAGORA Foundation",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/bosagora/stoa/issues"
-  },
-  "homepage": "https://github.com/bosagora/stoa#readme",
-  "dependencies": {
-    "@ctrl/ts-base32": "^1.2.4",
-    "@types/app-root-path": "^1.2.4",
-    "@types/cors": "^2.8.8",
-    "@types/mongodb": "^3.6.17",
-    "@types/socket.io": "^3.0.2",
-    "@types/sqlite3": "^3.1.6",
-    "argparse": "^2.0.1",
-    "assert": "^2.0.0",
-    "axios": "^0.21.1",
-    "boa-sdk-ts": "^0.0.52",
-    "body-parser": "^1.19.0",
-    "coingecko-api-v3": "0.0.11",
-    "cors": "^2.8.5",
-    "crc": "^3.8.0",
-    "event-dispatch": "^0.4.1",
-    "express": "^4.17.1",
-    "extend": "^3.0.2",
-    "ip": "^1.1.5",
-    "js-yaml": "^3.14.0",
-    "jsbi": "^3.1.4",
-    "mkdirp": "^1.0.4",
-    "mysql2": "^2.2.5",
-    "node-cron": "^3.0.0",
-    "smart-buffer": "^4.1.0",
-    "socket.io": "^4.1.2",
-    "socket.io-client": "^4.1.2",
-    "source-map-support": "^0.5.19",
-    "urijs": "^1.19.6",
-    "winston": "^3.3.3",
-    "winston-mongodb": "^5.0.7"
-  },
-  "devDependencies": {
-    "@types/argparse": "^2.0.2",
-    "@types/chai": "^4.2.14",
-    "@types/coingecko-api": "^1.0.0",
-    "@types/crc": "^3.4.0",
-    "@types/express": "^4.17.8",
-    "@types/extend": "^3.0.1",
-    "@types/ip": "^1.1.0",
-    "@types/js-yaml": "^3.12.5",
-    "@types/mkdirp": "^1.0.1",
-    "@types/mocha": "^7.0.2",
-    "@types/node-cron": "^2.0.3",
-    "@types/urijs": "^1.19.12",
-    "boa-sodium-ts": "^0.1.0",
-    "chai": "^4.2.0",
-    "mocha": "^8.2.0",
-    "ts-loader": "^7.0.5",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
-  }
+    "name": "stoa",
+    "version": "0.0.0",
+    "description": "API server for Agora",
+    "main": "src/main.js",
+    "scripts": {
+        "test": "NODE_ENV=test mocha --exit -r ts-node/register tests/**/*.test.ts --timeout 10000",
+        "debug": "NODE_ENV=development mocha -r ts-node/register tests/**/*.test.ts",
+        "start": "NODE_ENV=production ts-node src/main.ts",
+        "convert": "ts-node .npm/convert-stoa-sample-data/convert-blocks.ts .npm/convert-stoa-sample-data/old/sample.json .npm/convert-stoa-sample-data/old/sample_utxo.json",
+        "tsc": "tsc"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/bosagora/stoa.git"
+    },
+    "author": "BOSAGORA Foundation",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/bosagora/stoa/issues"
+    },
+    "homepage": "https://github.com/bosagora/stoa#readme",
+    "dependencies": {
+        "@ctrl/ts-base32": "^1.2.4",
+        "@types/app-root-path": "^1.2.4",
+        "@types/cors": "^2.8.8",
+        "@types/mongodb": "^3.6.17",
+        "@types/socket.io": "^3.0.2",
+        "argparse": "^2.0.1",
+        "assert": "^2.0.0",
+        "axios": "^0.21.1",
+        "boa-sdk-ts": "^0.0.52",
+        "body-parser": "^1.19.0",
+        "coingecko-api-v3": "0.0.11",
+        "cors": "^2.8.5",
+        "crc": "^3.8.0",
+        "event-dispatch": "^0.4.1",
+        "express": "^4.17.1",
+        "extend": "^3.0.2",
+        "ip": "^1.1.5",
+        "js-yaml": "^3.14.0",
+        "jsbi": "^3.1.4",
+        "mkdirp": "^1.0.4",
+        "mysql2": "^2.2.5",
+        "node-cron": "^3.0.0",
+        "smart-buffer": "^4.1.0",
+        "socket.io": "^4.1.2",
+        "socket.io-client": "^4.1.2",
+        "source-map-support": "^0.5.19",
+        "urijs": "^1.19.6",
+        "winston": "^3.3.3",
+        "winston-mongodb": "^5.0.7"
+    },
+    "devDependencies": {
+        "@types/argparse": "^2.0.2",
+        "@types/chai": "^4.2.14",
+        "@types/coingecko-api": "^1.0.0",
+        "@types/crc": "^3.4.0",
+        "@types/express": "^4.17.8",
+        "@types/extend": "^3.0.1",
+        "@types/ip": "^1.1.0",
+        "@types/js-yaml": "^3.12.5",
+        "@types/mkdirp": "^1.0.1",
+        "@types/mocha": "^7.0.2",
+        "@types/node-cron": "^2.0.3",
+        "@types/urijs": "^1.19.12",
+        "boa-sodium-ts": "^0.1.0",
+        "chai": "^4.2.0",
+        "mocha": "^8.2.0",
+        "ts-loader": "^7.0.5",
+        "ts-node": "^8.10.2",
+        "tslint": "^6.1.3",
+        "tslint-config-prettier": "^1.18.0",
+        "typescript": "^3.9.7"
+    }
 }
