--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "API server for Agora",
     "main": "src/main.js",
     "scripts": {
-        "test": "NODE_ENV=test mocha --exit -r ts-node/register tests/**/*.test.ts --timeout 10000",
-        "debug": "NODE_ENV=development mocha -r ts-node/register tests/**/*.test.ts",
-        "start": "NODE_ENV=production ts-node src/main.ts",
+        "test": "cross-env NODE_ENV=test mocha --exit -r ts-node/register tests/**/*.test.ts --timeout 10000",
+        "debug": "cross-env NODE_ENV=development mocha -r ts-node/register tests/**/*.test.ts",
+        "start": "cross-env NODE_ENV=production ts-node src/main.ts",
         "convert": "ts-node .npm/convert-stoa-sample-data/convert-blocks.ts .npm/convert-stoa-sample-data/old/sample.json .npm/convert-stoa-sample-data/old/sample_utxo.json",
         "tsc": "tsc"
     },
@@ -66,6 +66,7 @@
         "@types/urijs": "^1.19.12",
         "boa-sodium-ts": "^0.1.0",
         "chai": "^4.2.0",
+        "cross-env": "^7.0.3",
         "mocha": "^8.2.0",
         "ts-loader": "^7.0.5",
         "ts-node": "^8.10.2",
