--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
         "jsbi": "^3.1.4",
         "mkdirp": "^1.0.4",
         "moment": "^2.29.1",
+        "mongoose": "^5.13.2",
         "mysql2": "^2.2.5",
         "node-cron": "^3.0.0",
+        "response-time": "^2.3.2",
+        "sinon": "^11.1.1",
         "smart-buffer": "^4.1.0",
         "socket.io": "^4.1.2",
         "socket.io-client": "^4.1.2",
@@ -64,6 +67,8 @@
         "@types/mkdirp": "^1.0.1",
         "@types/mocha": "^7.0.2",
         "@types/node-cron": "^2.0.3",
+        "@types/response-time": "^2.3.5",
+        "@types/sinon": "^10.0.2",
         "@types/urijs": "^1.19.12",
         "boa-sodium-ts": "^0.1.0",
         "chai": "^4.2.0",
