Apply mysql connection pool
Connection pools help reduce the time spent connecting to the MySQL server by reusing a previous connection,
leaving them open instead of closing when you are done with them.
This improves the latency of queries as you avoid all of the overhead
that comes with establishing a new connection.
The connection can now be pulled out of the pool and used to create a new connection or to use the created connection.

--- a/docs/config.test.yaml
+++ b/docs/config.test.yaml
@@ -19,6 +19,9 @@ database:
    database : devstoa
    password : "12345678"
    port : 3306
+   waitForConnections : true
+   connectionLimit : 10
+   queueLimit : 0
 
 ################################################################################
 ##                               Logging options                              ##
