--- a/docs/config.example.yaml
+++ b/docs/config.example.yaml
@@ -19,6 +19,9 @@ database:
    database : stoa
    password : "12345678"
    port : 3306
+   waitForConnections : true
+   connectionLimit : 30
+   queueLimit : 0
 
 ################################################################################
 ##                               Logging options                              ##
