--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "express": "^4.17.1",
         "extend": "^3.0.2",
         "ip": "^1.1.5",
+        "js-big-decimal": "^1.3.4",
         "js-yaml": "^3.14.0",
         "lodash": "^4.17.21",
         "mkdirp": "^1.0.4",
