--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "extend": "^3.0.2",
         "ip": "^1.1.5",
         "js-yaml": "^3.14.0",
+        "lodash": "^4.17.21",
         "mkdirp": "^1.0.4",
         "moment": "^2.29.1",
         "mongoose": "^5.13.2",
@@ -66,6 +67,7 @@
         "@types/extend": "^3.0.1",
         "@types/ip": "^1.1.0",
         "@types/js-yaml": "^3.12.5",
+        "@types/lodash": "^4.14.175",
         "@types/mkdirp": "^1.0.1",
         "@types/mocha": "^7.0.2",
         "@types/node-cron": "^2.0.3",
