sendgrid email service was added validator was updated on block header update event

--- a/docs/config.example.yaml
+++ b/docs/config.example.yaml
@@ -14,6 +14,9 @@ server:
   #Votera required
   require_votera: true
 
+  #Sendgrid required
+  require_sendgrid: false
+
 ################################################################################
 ##                               Database options                             ##
 ################################################################################
@@ -68,4 +71,17 @@ votera:
 
     # Endpoint of Agora
     votera_endpoint: http://dev-votera.bosagora.com:1337/
+    
+################################################################################
+##                               Sendgrid config                              ##
+################################################################################
+sendgrid:
+    # Sendgrid API key
+    api_key: ""
+
+    # Sendgrid Email
+    email: ""
+
+    # Receiver Email
+    receiver_email: ""
     
