--- a/docs/config.test.yaml
+++ b/docs/config.test.yaml
@@ -13,6 +13,9 @@ server:
 
   #Votera required
   require_votera: true
+  
+  #Sendgrid required
+  require_sendgrid: false
 
 ################################################################################
 ##                               Database options                             ##
@@ -68,3 +71,16 @@ votera:
 
     # Endpoint of Agora
     votera_endpoint: http://dev-votera.bosagora.com:1337/
+
+################################################################################
+##                               Sendgrid config                              ##
+################################################################################
+sendgrid:
+    # Sendgrid API key
+    api_key: ""
+
+    # Sendgrid Email
+    email: ""
+
+    # Receiver Email
+    receiver_email: ""
