--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "API server for Agora",
     "main": "src/main.js",
     "scripts": {
-        "test": "",
+        "test": "cross-env NODE_ENV=test mocha --exit -r ts-node/register tests/**/*.test.ts --timeout 10000",
         "debug": "cross-env NODE_ENV=development mocha -r ts-node/register tests/**/*.test.ts",
         "start": "cross-env NODE_ENV=production ts-node src/main.ts",
         "convert": "ts-node .npm/convert-stoa-sample-data/convert-blocks.ts .npm/convert-stoa-sample-data/old/sample.json .npm/convert-stoa-sample-data/old/sample_utxo.json",
